Installed website with sample data.

--- a/UmbracoSeven.Web/UmbracoSeven.Web.csproj
+++ b/UmbracoSeven.Web/UmbracoSeven.Web.csproj
@@ -15,7 +15,7 @@
     <RootNamespace>UmbracoSeven.Web</RootNamespace>
     <AssemblyName>UmbracoSeven.Web</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
-    <UseIISExpress>true</UseIISExpress>
+    <UseIISExpress>false</UseIISExpress>
     <Use64BitIISExpress />
     <IISExpressSSLPort />
     <IISExpressAnonymousAuthentication />
@@ -342,7 +342,7 @@
           <AutoAssignPort>True</AutoAssignPort>
           <DevelopmentServerPort>50152</DevelopmentServerPort>
           <DevelopmentServerVPath>/</DevelopmentServerVPath>
-          <IISUrl>http://localhost:50152/</IISUrl>
+          <IISUrl>http://umbraco.seven.local</IISUrl>
           <NTLMAuthentication>False</NTLMAuthentication>
           <UseCustomServer>False</UseCustomServer>
           <CustomServerUrl>
